--- a/templates/index.html
+++ b/templates/index.html
@@ -12,14 +12,11 @@
 </head>
 <body>
     <header class="header">
-        <a href="/">
-            <img class="option-logo" src="{{ url_for('static', filename='images/AAlogo.png') }}" alt="logo">
-        </a>
-        <nav class="nav-bar"  >
-            <a href="/about" class="nav-text">About Me</a>
-            <a href="/projects" class="nav-text">Projects</a>
+        <a href="/" class="nav-text" id="home-link">Home</a>
+        <nav class="nav-bar" style="margin-left: 60%;">
+            <a href="/about" class="nav-text" id="about-link">About Me</a>
+            <a href="/projects" class="nav-text" id="projects-link">Projects</a>
         </nav>
-        <button class="toggle-button" onclick="myFunction()">Playground</button>
     </header>
 
     <script> 
@@ -27,6 +24,16 @@
             var element = document.body
             element.classList.toggle("background-change");
         }
+
+        document.addEventListener('DOMContentLoaded', function() {
+            const navLinks = document.querySelectorAll('.nav-text');
+            navLinks.forEach(link => {
+                if (link.href === window.location.href) {
+                    link.classList.add('active');
+                }
+            });
+        });
+
     </script>
 </body>
 </html>
