--- a/static/css/index.css
+++ b/static/css/index.css
@@ -1,13 +1,15 @@
 body {
     font-family: 'Arial', sans-serif;
-    margin: 0;
-    padding: 0;
-    background: beige;
+    background-image: url('/static/images/city_background_day.jpg');
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    height: 100vh;
 }
 
 
-.header {
-    background: rgb(246, 246, 246);
+header {
+    background: transparent;
     position: fixed;
     left: 0;
     top: 0;
@@ -16,26 +18,27 @@ body {
     padding: 20px 100px;
     z-index: 2;
     transition: all 0.4s;
-    box-shadow: 0 3px 10px rgb(0, 0, 0, 0.15);
     display: flex;
     flex-direction: row;
 }
 
 .header-scrolled {
-    background: rgb(246, 246, 246, 0.85);
+    background: rgb(255, 255, 255, 0.98);
+    box-shadow: 0 3px 10px rgb(0, 0, 0, 0.25);
     position: fixed;
     left: 0;
     top: 0;
     width: 100%;
     padding: 20px 100px;
     z-index: 2;
+    animation: none;
+    transform: scale(1.0035);
 }
 
 .nav-bar {
     display: flex;
     flex-direction: row;
-    padding-right: 100px;
- 
+    padding-right: 100px; 
 }
 
 .nav-text {
@@ -52,6 +55,17 @@ body {
     text-shadow: 0 0 40px rgb(0, 0, 0, 0.4);
 }
 
+.nav-text.active::after {
+    content: '•';
+    display: block;
+    text-align: center;
+    color: black;
+    margin-top: 3px;
+}
+
+.nav-text:hover::after {
+    color: lightskyblue;
+}
 .option-logo {
     width: 75px;
     height: 75px;
@@ -77,14 +91,6 @@ body {
 .toggle-button:hover {
     box-shadow: inset 300px 0 0 0 pink;
     cursor: pointer;
-}
-
-body {
-    font-family: 'Arial', sans-serif;
-    margin: 0;
-    padding: 0;
-    background: rgb(255,255,255);
-    margin-top: 300px;
 }
 
 .background-change{
