--- a/static/css/IndividualProjects/andersonCodingClub.css
+++ b/static/css/IndividualProjects/andersonCodingClub.css
@@ -14,6 +14,7 @@
 }
 
 
+
 .nav-bar {
     display: flex;
     flex-direction: row;
@@ -30,7 +31,8 @@
     -0.5px -0.5px 0 #fff,  
      0.5px -0.5px 0 #fff,
     -0.5px  0.5px 0 #fff,
-     0.5px  0.5px 0 #fff;     margin-top: 50px;
+     0.5px  0.5px 0 #fff;    
+    margin-top: 50px;
     margin-left: 40px;
 }
 
@@ -111,6 +113,8 @@ a {
 
 .img-background {
     width: 100%;
+    height: 100vh;
+    object-fit: cover;
 }
 
 .img-vertical {
@@ -137,7 +141,8 @@ a {
 }
 
 .load-button:hover {
-    transform: scale(1.1, 1.4);
+    transform: scale(1.05, 1.3);
+
 }
 
 .load-button {
@@ -152,6 +157,7 @@ a {
     transition: 0.5s all;
     z-index: 101;
 }
+
 
 .hidden-content {
     display: none
@@ -182,8 +188,47 @@ a {
     font-size: 40px;
     display: inline-block;
     text-align: left;
-    margin-left: 110px;
+    margin-left: 200px;
+    overflow: hidden;
+    visibility: hidden;
+    z-index: 5; 
+    margin-bottom: 500px; 
+    position: absolute;
 }
+
+.buffer-text::before,
+.buffer-text::after {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    transition: transform 0.5s;
+    display: block;
+    visibility: visible;
+}
+
+.buffer-text::before {
+    content: "Next \A Page";
+    white-space: pre;
+    transform: translateY(0);
+}
+
+.buffer-text::after {
+    content: "Fist \A Bump";
+    white-space: pre;
+    transform: translateY(-100%);
+}
+
+.load-button:hover ~ .buffer-text::before {
+    transform: translateY(100%);
+}
+
+.load-button:hover ~ .buffer-text::after {
+    transform: translateY(0);
+}
+
+
 
 @keyframes glow {
     0% {box-shadow: inset 0 0 1000px 1000px rgb(238, 255, 3); }
@@ -212,21 +257,19 @@ a {
         bottom: -100%;
     }
     100% {
-        bottom: -80%;
+        bottom: -85%;
     }
 }
 
 @keyframes scrollOut {
     0% {
-        bottom: -80%;
+        bottom: -85%;
+       
     }
-    
     100% {
-        bottom: -100%;
+        bottom: -110%;
     }
 }
-
-
 
 #input-blocker {
     position: fixed;
@@ -241,4 +284,7 @@ a {
 #input-blocker.active {
     pointer-events: all;
 }
+
+
+
 
