--- a/static/css/IndividualProjects/stockSentiment.css
+++ b/static/css/IndividualProjects/stockSentiment.css
@@ -14,6 +14,7 @@
 }
 
 
+
 .nav-bar {
     display: flex;
     flex-direction: row;
@@ -30,7 +31,7 @@
     -0.5px -0.5px 0 #fff,  
      0.5px -0.5px 0 #fff,
     -0.5px  0.5px 0 #fff,
-     0.5px  0.5px 0 #fff;     
+     0.5px  0.5px 0 #fff;    
     margin-top: 50px;
     margin-left: 40px;
 }
@@ -112,6 +113,8 @@ a {
 
 .img-background {
     width: 100%;
+    height: 100vh;
+    object-fit: cover;
 }
 
 .img-vertical {
@@ -130,7 +133,7 @@ a {
     width: 90%;
     background-color: white;
     transition: 0.5s all;
-
+    
 }
 
 .buffer-zone-move {
@@ -138,12 +141,11 @@ a {
 }
 
 .load-button:hover {
-    transform: scale(1.1, 1.4);
+    transform: scale(1.05, 1.3);
 
 }
 
 .load-button {
-    
     padding-left: 300px;
     padding-right: 300px;
     padding-top: 50px;
@@ -156,14 +158,14 @@ a {
     z-index: 101;
 }
 
+
 .hidden-content {
-    display: none;
+    display: none
 }
 
 .hidden {
     display: none;
 }
-
 
 .no-scroll {
     overflow: hidden;
@@ -186,19 +188,55 @@ a {
     font-size: 40px;
     display: inline-block;
     text-align: left;
-    margin-left: 110px;
+    margin-left: 200px;
+    overflow: hidden;
+    visibility: hidden;
+    z-index: 5; 
+    margin-bottom: 500px; 
+    position: absolute;
+}
+
+.buffer-text::before,
+.buffer-text::after {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    transition: transform 0.5s;
+    display: block;
+    visibility: visible;
+}
+
+.buffer-text::before {
+    content: "Next \A Page";
+    white-space: pre;
+    transform: translateY(0);
+}
+
+.buffer-text::after {
+    content: "Coding \A Club";
+    white-space: pre;
+    transform: translateY(-100%);
+}
+
+.load-button:hover ~ .buffer-text::before {
+    transform: translateY(100%);
+}
+
+.load-button:hover ~ .buffer-text::after {
+    transform: translateY(0);
 }
 
 
+
 @keyframes glow {
-    0% {box-shadow: inset 0 0 1000px 1000px rgb(255, 64, 64, 0.8); }
-    30% {box-shadow: inset 0 0 1000px 1000px rgb(255, 64, 64, 0.8);}
+    0% {box-shadow: inset 0 0 1000px 1000px rgb(238, 255, 3); }
+    30% {box-shadow: inset 0 0 1000px 1000px rgb(238, 255, 3);}
     100% { opacity: 1;
         box-shadow: none;}
     
 }
-
-
 
 #next-page-preview {
     position: fixed; 
@@ -219,16 +257,17 @@ a {
         bottom: -100%;
     }
     100% {
-        bottom: -80%;
+        bottom: -85%;
     }
 }
 
 @keyframes scrollOut {
     0% {
-        bottom: -80%;
+        bottom: -85%;
+       
     }
     100% {
-        bottom: -100%;
+        bottom: -110%;
     }
 }
 
@@ -245,4 +284,7 @@ a {
 #input-blocker.active {
     pointer-events: all;
 }
+
+
+
 
