--- a/static/css/index.css
+++ b/static/css/index.css
@@ -1,3 +1,8 @@
+* {
+    margin: 0;
+    padding: 0;
+}
+
 body {
     font-family: 'Arial', sans-serif;
     background-image: url('/static/images/city_background_day.jpg');
@@ -5,6 +10,8 @@ body {
     background-position: center;
     background-repeat: no-repeat;
     height: 100vh;
+    background-attachment: fixed;
+    z-index: -9999;
 }
 
 
@@ -23,7 +30,7 @@ header {
 }
 
 .header-scrolled {
-    background: rgb(255, 255, 255, 0.98);
+    background: rgb(255, 255, 255, 0.97);
     box-shadow: 0 3px 10px rgb(0, 0, 0, 0.25);
     position: fixed;
     left: 0;
@@ -35,10 +42,26 @@ header {
     transform: scale(1.0035);
 }
 
+.page-row-section {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+}
+.page-column-section {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    padding-top: none;
+}
+
 .nav-bar {
     display: flex;
     flex-direction: row;
     padding-right: 100px; 
+    margin-left: 60%;
 }
 
 .nav-text {
@@ -66,12 +89,25 @@ header {
 .nav-text:hover::after {
     color: lightskyblue;
 }
-.option-logo {
-    width: 75px;
-    height: 75px;
+
+.content {
+    position: relative;
     display: flex;
+    width: 100vw;
+    align-items: center;
+    justify-content: center;
+    margin: 0 auto;
+    background: white;
+    margin-top: 210px;
 }
 
+.profile-picture {
+    border-radius: 100%;
+    height: 400px;
+    width: 400px;
+    margin-top: 220px;
+    object-fit: cover;
+}
 
 .toggle-button {
     width: 150px;
@@ -97,6 +133,7 @@ header {
 
     background: pink;
 }
+
 
 a {
     text-decoration: none;
