--- a/static/css/projects.css
+++ b/static/css/projects.css
@@ -152,7 +152,7 @@ body {
     line-height: 1.7;
     align-items: center;
     justify-content: center;
-    text-align: center;
+    text-align: left;
     transition: all 0.5s ease;
 }
 
@@ -209,7 +209,7 @@ body {
 }
 
 .content img {
-    margin-right: 200px;
+    margin-right: 50px;
     transition: all 0.5s ease;
 }
 
