--- a/templates/IndividualProjects/andersonCodingClub.html
+++ b/templates/IndividualProjects/andersonCodingClub.html
@@ -18,7 +18,7 @@
             </header>
             <main id="infinite-content">
                 <div style=" text-align: center;">
-                    <img class="img-background" src="{{ url_for('static', filename='images/img1.jpeg') }}" alt="fistbump home page">
+                    <img class="img-background" src="{{ url_for('static', filename='images/anderson_coding_club.jpeg') }}" alt="fistbump home page">
                 </div>
     
                 <div class="selector-content">
@@ -35,14 +35,13 @@
                     </div>
                 </div>
                 <div class="page-column-section" style="position: relative; height: 100vh;">
-                    <p class="buffer-text" style="z-index: 5; margin-bottom: 350px; position: absolute;">Next<br>Project</p>
-                    <div class="buffer-zone page-row-section" style="display: flex; align-items: flex-end; height: 100%;" > 
+                    <div class="buffer-zone page-row-section" style="display: flex; align-items: flex-end; height: 100%;"> 
                         <button class="load-button" style="margin-top: auto;">
                             <img class="buffer-img" style="position: relative;" src="{{ url_for('static', filename='images/slim_down_arrow.png') }}">
                         </button>
+                        <p class="buffer-text" aria-hidden="true">Placeholder<br>Text</p>
                     </div>
                 </div>
-
                 <div id="next-page-preview" class="hidden"></div>
             </main>
         </div>
@@ -170,7 +169,7 @@
                         document.getElementById('loading').style.display = 'none';
                         loading = false;
 
-                        smoothScrollTo(0, 2500, () => {
+                        smoothScrollTo(0, 1500, () => {
                             const oldContent = document.querySelectorAll('#infinite-content > div:not(:last-child)');
                             oldContent.forEach(element => element.classList.add('hidden-content'));
                         });
@@ -178,6 +177,10 @@
 
                         const newButton = newContentContainer.querySelector('.load-button');
                         attachEventListenersToButton(newButton);
+
+
+                        const newCSSUrl = newDocument.querySelector('link[rel="stylesheet"]').getAttribute('href');
+                        document.querySelector('link[rel="stylesheet"]').setAttribute('href', newCSSUrl);
 
                         prefetchNextPage();
 
