--- a/templates/projects.html
+++ b/templates/projects.html
@@ -26,8 +26,8 @@
                             <div class="page-row-section inner-row-section">
                                 <img src="{{ url_for('static', filename='images/fistbumpHome.jpeg')}}">
                                 <div class="page-column-section inner-column-section">
-                                    <h1 class="page-text" style="font-size: 30px;">Fistbump</h1>
-                                    <p class="page-text"> Social Media Project</p>
+                                    <h1 class="page-text" style="font-size: 45px;">Fistbump</h1>
+                                    <p class="page-text" style="font-size: 20px; color: darkgrey;"> Social Media Project</p>
                                 </div>
                             </div>
                         </div>
@@ -44,8 +44,8 @@
                             <div class="page-row-section inner-row-section">
                                 <img src="{{ url_for('static', filename='images/positive_data_word_cloud.jpeg')}}">
                                 <div class="page-column-section inner-column-section">
-                                    <h1 class="page-text" style="font-size: 30px;"> NLP for Finance</h1>
-                                    <p class="page-text"> Leverageing Machine Learning to analyze Stock Sentiment </p>
+                                    <h1 class="page-text" style="font-size: 45px;"> NLP for Finance</h1>
+                                    <p class="page-text" style="font-size: 20px; color: darkgrey;"> Leverageing Machine Learning to analyze Stock Sentiment </p>
                                 </div>
                             </div>
                         </div>
@@ -59,7 +59,13 @@
                 <a href="/andersonCodingClub">
                     <div class="selector-content">
                         <div class="content default-mode">
-                            <p class="page-text"> COding Club </p>
+                            <div class="page-row-section inner-row-section">
+                                <img src="{{ url_for('static', filename='images/anderson_coding_club.jpeg')}}">
+                                <div class="page-column-section inner-column-section">
+                                    <h1 class="page-text" style="font-size: 45px;">Anderson Coding Club</h1>
+                                    <p class="page-text" style="font-size: 20px; color: darkgrey;"> Leverageing Machine Learning to analyze Stock Sentiment </p>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </a>
