--- a/templates/index.html
+++ b/templates/index.html
@@ -30,7 +30,20 @@
             </section>
         </div>
     </div>
-
+    <div class="timeline">
+        <div class="timeline-component">
+            <div class="timeline--date timeline-date-right">Jul 20, 2024</div>
+        </div>
+        <div class="timeline-middle">
+            <div class="timeline-point"></div>
+        </div>
+        <div class="timeline-component timeline-component-bg">
+            <h2 class="timeline-title">Day of timeline creation</h2>
+            <p class="timeline-paragraph">
+                This was when I created this timeline and learned how to do this.
+            </p>
+        </div>
+    </div>
     <script> 
         function myFunction() {
             var element = document.body
