Additions to Timeline + Painting in Background on Scroll Visual Effect Addition to Index Page

--- a/templates/index.html
+++ b/templates/index.html
@@ -24,26 +24,185 @@
             <h1 style="font-size: 20px; margin-top: 30px; color: white;">Hi, I'm</h1>
             <h2 style="font-size: 100px; color: rgb(255, 217, 0);">Avery Allen</h2>
         </div>
-        <div class="content" style="padding-bottom: 1000px;">
-            <section> 
-                <p> kajkdsjkej aksdjklfej kl jes ke kjkj ;as;ej kl jefk;l fj;lka jskl;j;klfasej f;kle jawkl;ej flkasdjflk jdasifhjelwn jfsdjlkf jdsalifj lakwrelk jrwlkejflkewj lkfj diosj flkesj </p>
-            </section>
-        </div>
+        <div class="content page-column-section" style="padding-bottom: 1000px;">
+            <div class="spacer"></div>
+            <div class="scroller">
+                <div class="mask">
+                    <svg width="200" height="200" viewBox="0 0 200 200" direction="ltr" xmlns="http://www.w3.org/2000/svg">
+                        <path d="M20 0 
+                        C 100 5, 100 10, 180 15 
+                        S 100 20, 20 25 
+                        S 100 30, 180 35 
+                        S 100 40, 20 45 
+                        S 100 50, 180 55 
+                        S 100 60, 20 65 
+                        S 100 70, 180 75 
+                        S 100 80, 20 85 
+                        S 100 90, 180 95 
+                        S 100 100, 20 105 
+                        S 100 110, 180 115 
+                        S 100 120, 20 125 
+                        S 100 130, 180 135 
+                        S 100 140, 20 145 
+                        S 100 150, 180 155 
+                        S 100 160, 20 165 
+                        S 100 170, 180 175 
+                        S 100 180, 20 185 
+                        S 100 190, 180 195 
+                        S 100 200, 20 205"
+                                stroke-linecap="round" stroke-linejoin="round" stroke="black" fill="none" pointer-events="all"/>
+                    </svg>
+                </div>
+                <div class="timeline">
+                    <div class="timeline-component">
+                        <div class="timeline--date timeline-date-right">Jul 20, 2024</div>
+                    </div>
+                    <div class="timeline-middle">
+                        <div class="timeline-point"></div>
+                    </div>
+                    <div class="timeline-component timeline-component-bg">
+                        <h2 class="timeline-title">Day of timeline creation</h2>
+                        <p class="timeline-paragraph">
+                            This was when I created this timeline and learned how to do this.
+                        </p>
+                    </div>
+                    <div class="timeline-component timeline-component-bg">
+                        <h2 class="timeline-title">Day of timeline creation</h2>
+                        <p class="timeline-paragraph">
+                            This was when I created this timeline and learned how to do this.
+                        </p>
+                    </div>
+                    <div class="timeline-middle">
+                        <div class="timeline-point"></div>
+                    </div>
+                    <div class="timeline-component">
+                        <div class="timeline--date">Jul 20, 2024</div>
+                    </div>
+                    <div class="timeline-component">
+                        <div class="timeline--date timeline-date-right">feb 23, 2023 - apr 24, 2023</div>
+                    </div>
+                    <div class="timeline-middle">
+                        <div class="timeline-point"></div>
+                    </div>
+                    <div class="timeline-component timeline-component-bg">
+                        <h2 class="timeline-title">Python book for beginners</h2>
+                        <p class="timeline-paragraph">
+                            This was my first time learning a read coding language: python. I learned about basic variables, lists, dicitonarys, and loops in the python language as well as how to figure out and solve basic problems.
+                        </p>
+                    </div>
+                    <div class="timeline-component timeline-component-bg">
+                        <h2 class="timeline-title">CS50: Introduction to Computer Science</h2>
+                        <p class="timeline-paragraph">
+                            Enrolled in and completed the Harvard CS50 Introduction To Computer Science course. Covering C++, Python, SQL, Scratch and more, I was taught how to learn how to code and how to solve the problems that would arise while learning new code.
+                        </p>
+                    </div>
+                    <div class="timeline-middle">
+                        <div class="timeline-point"></div>
+                    </div>
+                    <div class="timeline-component">
+                        <div class="timeline--date">jun 20, 2023</div>
+                    </div>
+                    <div class="timeline-component">
+                        <div class="timeline--date timeline-date-right">Jul 20, 2024</div>
+                    </div>
+                    <div class="timeline-middle">
+                        <div class="timeline-point"></div>
+                    </div>
+                    <div class="timeline-component timeline-component-bg">
+                        <h2 class="timeline-title">Day of timeline creation</h2>
+                        <p class="timeline-paragraph">
+                            This was when I created this timeline and learned how to do this.
+                        </p>
+                    </div>
+                    <div class="timeline-component timeline-component-bg">
+                        <h2 class="timeline-title">Day of timeline creation</h2>
+                        <p class="timeline-paragraph">
+                            This was when I created this timeline and learned how to do this.
+                        </p>
+                    </div>
+                    <div class="timeline-middle">
+                        <div class="timeline-point"></div>
+                    </div>
+                    <div class="timeline-component">
+                        <div class="timeline--date">Jul 20, 2024</div>
+                    </div>
+                    <div class="timeline-component">
+                        <div class="timeline--date timeline-date-right">Jul 20, 2024</div>
+                    </div>
+                    <div class="timeline-middle">
+                        <div class="timeline-point"></div>
+                    </div>
+                    <div class="timeline-component timeline-component-bg">
+                        <h2 class="timeline-title">Day of timeline creation</h2>
+                        <p class="timeline-paragraph">
+                            This was when I created this timeline and learned how to do this.
+                        </p>
+                    </div>
+                    <div class="timeline-component timeline-component-bg">
+                        <h2 class="timeline-title">Day of timeline creation</h2>
+                        <p class="timeline-paragraph">
+                            This was when I created this timeline and learned how to do this.
+                        </p>
+                    </div>
+                    <div class="timeline-middle">
+                        <div class="timeline-point"></div>
+                    </div>
+                    <div class="timeline-component">
+                        <div class="timeline--date">Jul 20, 2024</div>
+                    </div>
+                    <div class="timeline-component">
+                        <div class="timeline--date timeline-date-right">Jul 20, 2024</div>
+                    </div>
+                    <div class="timeline-middle">
+                        <div class="timeline-point"></div>
+                    </div>
+                    <div class="timeline-component timeline-component-bg">
+                        <h2 class="timeline-title">Day of timeline creation</h2>
+                        <p class="timeline-paragraph">
+                            This was when I created this timeline and learned how to do this.
+                        </p>
+                    </div>
+                    <div class="timeline-component timeline-component-bg">
+                        <h2 class="timeline-title">Day of timeline creation</h2>
+                        <p class="timeline-paragraph">
+                            This was when I created this timeline and learned how to do this.
+                        </p>
+                    </div>
+                    <div class="timeline-middle">
+                        <div class="timeline-point"></div>
+                    </div>
+                    <div class="timeline-component">
+                        <div class="timeline--date">Jul 20, 2024</div>
+                    </div>
+                    <div class="timeline-component">
+                        <div class="timeline--date timeline-date-right">Jul 20, 2024</div>
+                    </div>
+                    <div class="timeline-middle">
+                        <div class="timeline-point"></div>
+                    </div>
+                    <div class="timeline-component timeline-component-bg">
+                        <h2 class="timeline-title">Day of timeline creation</h2>
+                        <p class="timeline-paragraph">
+                            This was when I created this timeline and learned how to do this.
+                        </p>
+                    </div>
+                    <div class="timeline-component timeline-component-bg">
+                        <h2 class="timeline-title">Day of timeline creation</h2>
+                        <p class="timeline-paragraph">
+                            This was when I created this timeline and learned how to do this.
+                        </p>
+                    </div>
+                    <div class="timeline-middle">
+                        <div class="timeline-point"></div>
+                    </div>
+                    <div class="timeline-component">
+                        <div class="timeline--date">Jul 20, 2024</div>
+                    </div>
+                </div>
+            </div>
+            <div class="spacer"></div>
     </div>
-    <div class="timeline">
-        <div class="timeline-component">
-            <div class="timeline--date timeline-date-right">Jul 20, 2024</div>
-        </div>
-        <div class="timeline-middle">
-            <div class="timeline-point"></div>
-        </div>
-        <div class="timeline-component timeline-component-bg">
-            <h2 class="timeline-title">Day of timeline creation</h2>
-            <p class="timeline-paragraph">
-                This was when I created this timeline and learned how to do this.
-            </p>
-        </div>
-    </div>
+    
     <script> 
         function myFunction() {
             var element = document.body
