--- a/static/css/index.css
+++ b/static/css/index.css
@@ -154,8 +154,8 @@ a {
 }
 
 .timeline-component-bg {
-    padding: 1.5em;
-    background: lightgray;
+    padding: 1em;
+    background: rgb(246, 246, 246);
     box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
     border-radius: 10px;
 }
@@ -197,4 +197,48 @@ a {
 
 .timeline-paragraph {
     line-height: 1.5;
+}
+
+.scroller {
+    display: grid;
+
+    & > * {
+        grid-area: 1 / 1;
+        width: 100%;
+    }
+
+    .mask {
+        mix-blend-mode: lighten;
+        z-index: 2;
+    }
+
+    svg, .timeline {
+        width: 100%;
+        height: 100%;
+    }
+}
+
+.mask {
+    background: white;
+}
+
+path {
+    stroke-width: 14.3;
+    stroke-dasharray: 5116.1259765625;
+    stroke-dashoffset: 5116.1259765625;
+    view-timeline-name: --scribble-path;
+    view-timeline-axis: block;
+    animation: linear draw both;
+    animation-timeline: --scribble-path;
+    animation-range: entry 30% cover 75%; 
+}
+
+@keyframes draw {
+    to {
+        stroke-dashoffset: 0;
+    }
+}
+
+.spacer {
+    height: 30vh;
 }
