--- a/static/css/IndividualProjects/andersonCodingClub.css
+++ b/static/css/IndividualProjects/andersonCodingClub.css
@@ -52,7 +52,7 @@
 }
 
 .visible-selector-content {
-    animation: glow 2s forwards;
+    animation: appear 1.25s forwards;
 
 }
 
@@ -229,12 +229,17 @@ a {
 
 
 
-@keyframes glow {
-    0% {box-shadow: inset 0 0 1000px 1000px rgb(0, 110, 255, 0.8); }
-    30% {box-shadow: inset 0 0 1000px 1000px rgb(0, 110, 255, 0.8);}
-    100% { opacity: 1;
-        box-shadow: none;}
-    
+@keyframes appear {
+    0% {
+        transform: translateY(10%);
+    }
+    15% {
+        transform: translateY(9%);
+    }
+    100% {  
+        opacity: 1;
+        transform: translateY(0);
+    }
 }
 
 #next-page-preview {
@@ -262,8 +267,7 @@ a {
 
 @keyframes scrollOut {
     0% {
-        bottom: -85%;
-       
+        bottom: -85%; 
     }
     100% {
         bottom: -110%;
