--- a/static/css/index.css
+++ b/static/css/index.css
@@ -23,7 +23,7 @@ header {
     width: 100%;
     height: 75px;
     padding: 20px 100px;
-    z-index: 2;
+    z-index: 3;
     transition: all 0.4s;
     display: flex;
     flex-direction: row;
@@ -37,7 +37,7 @@ header {
     top: 0;
     width: 100%;
     padding: 20px 100px;
-    z-index: 2;
+    z-index: 3;
     animation: none;
     transform: scale(1.0035);
 }
@@ -88,6 +88,26 @@ header {
 
 .nav-text:hover::after {
     color: lightskyblue;
+}
+
+.expand {
+    cursor: default;
+    text-decoration: none;
+    transition: 0.5s ease;
+}
+
+.expand:hover {
+    cursor: default;
+    transform: scale(1.05);
+    /*box-shadow:rgb(0, 0, 0, 0.95)*/
+}
+
+.page-text {
+    align-items: center;
+    justify-content: center;
+    text-align: left;
+    line-height: 1.7;
+    font-size: 18px;
 }
 
 .content {
@@ -142,11 +162,16 @@ a {
 .timeline {
     margin: 0 auto;
     max-width: 750px;
-    padding: 25px;
+    padding-top: 25px;
     display: grid;
     grid-template-columns: 1fr 3px 1fr;
     font-family: 'Arial', sans-serif;
     color: black;
+    background-image: url('/static/images/leaves_background.jpg');
+    background-size: 75%;
+    background-position: 175px center;
+    padding-right: 350px;
+    padding-left: 350px;
 }
 
 .timeline-component {
@@ -162,6 +187,11 @@ a {
 
 .timeline-component-bottom {
     margin-bottom: 0;
+}
+
+.timeline-date {
+    font-size: 1.2em;
+    color: black;
 }
 
 .timeline-date-right {
@@ -212,7 +242,7 @@ a {
         z-index: 2;
     }
 
-    svg, .timeline {
+    svg {
         width: 100%;
         height: 100%;
     }
@@ -223,14 +253,14 @@ a {
 }
 
 path {
-    stroke-width: 14.3;
-    stroke-dasharray: 5116.1259765625;
-    stroke-dashoffset: 5116.1259765625;
+    stroke-width: 14.7;
+    stroke-dasharray: 16586.056640625;
+    stroke-dashoffset: 16586.056640625;
     view-timeline-name: --scribble-path;
     view-timeline-axis: block;
     animation: linear draw both;
     animation-timeline: --scribble-path;
-    animation-range: entry 30% cover 75%; 
+    animation-range: entry 25% cover 80%; 
 }
 
 @keyframes draw {
@@ -240,5 +270,69 @@ path {
 }
 
 .spacer {
-    height: 30vh;
+    height: 20vh;
+}
+
+.button-link {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 200px;
+    height: 45px;
+    margin-top: 50px;
+    background-color: rgb(51, 166, 204);
+    color: white;
+    border-radius: 4px;
+    box-shadow: inset 0 0 0 rgb(194, 115, 59);
+    transition: ease-out 0.3s;
+}
+
+.button-link:hover {
+    color: black;
+    transform: scale(1.04);
+    box-shadow: inset 300px 0 0 0 rgb(194, 115, 59);
+    cursor: pointer;
+}
+
+.scroll-button {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 200px;
+    height: 45px;
+    border-radius: 4px;
+    border: none;
+    background: rgb(21, 86, 21);
+    color: white;
+    text-decoration: none;
+    transition: ease-out 0.3s;
+    margin-top: 100px;
+    margin-bottom: 50px;
+}
+
+.scroll-button:hover {
+    cursor: pointer;
+    transform: scale(1.04);
+}
+
+.selector-content {
+    opacity: 0;
+}
+
+.visible-selector-content {
+    animation: appear 1.25s forwards;
+
+}
+
+@keyframes appear {
+    0% {
+        transform: translateY(10%);
+    }
+    15% {
+        transform: translateY(9%);
+    }
+    100% {  
+        opacity: 1;
+        transform: translateY(0);
+    }
 }
