--- a/templates/index.html
+++ b/templates/index.html
@@ -21,41 +21,120 @@
         </header>
         <div class="page-column-section">
             <img class="profile-picture" src="{{ url_for('static', filename='images/personal_picture.jpeg')  }}">
-            <h1 style="font-size: 20px; margin-top: 30px; color: white;">Hi, I'm</h1>
-            <h2 style="font-size: 100px; color: rgb(255, 217, 0);">Avery Allen</h2>
+            <h1 class="expand" style="font-size: 20px; margin-top: 30px; color: white;">Hi, I'm</h1>
+            <h2 class="expand" style="font-size: 100px; color: rgb(255, 217, 0);">Avery Allen</h2>
         </div>
-        <div class="content page-column-section" style="padding-bottom: 1000px;">
+        <div class="content page-column-section" style="padding-bottom: 0px;">
+            <section>
+                <div class="selector-content">
+                    <div class="page-row-section" style="margin-top: 150px;">
+                        <img style="margin-left: 200px;" src="{{ url_for('static', filename='images/index_about_me.jpeg')  }}">
+                        <div class="page-column-section">
+                            <div class="page-text" style="width: 70%; margin-left: 150px; margin-right: 150px;"> Hi, I'm Avery Allen and this is my Personal Website! I love pushing the boundaries of coding and exploring the different possibilities that can be achieved from code! While I am learning different Algorithms, Data Stuctures, Machine Learning Model, and various software for Robotics skills, this website was made to hone my front-end and back-end skills for Web Design/App Devlopment and really show who I am! I hope you explore my whole website and enjoy the extra visual features I added!</div>
+                            <a href="/about" class="button-link">About Me</a>
+                        </div>
+                    </div>
+                </div>
+            </section>
+            <section class="page-row-section">
+                <div></div>
+            </section>
             <div class="spacer"></div>
             <div class="scroller">
                 <div class="mask">
-                    <svg width="200" height="200" viewBox="0 0 200 200" direction="ltr" xmlns="http://www.w3.org/2000/svg">
-                        <path d="M20 0 
-                        C 100 5, 100 10, 180 15 
-                        S 100 20, 20 25 
-                        S 100 30, 180 35 
-                        S 100 40, 20 45 
-                        S 100 50, 180 55 
-                        S 100 60, 20 65 
-                        S 100 70, 180 75 
-                        S 100 80, 20 85 
-                        S 100 90, 180 95 
-                        S 100 100, 20 105 
-                        S 100 110, 180 115 
-                        S 100 120, 20 125 
-                        S 100 130, 180 135 
-                        S 100 140, 20 145 
+                    <svg width="100%" height="100%" viewBox="-50 0 300 400" direction="ltr" xmlns="http://www.w3.org/2000/svg">
+                        <path id="timelinePath" d="M20 0 
+                        C 90 5, 110 10, 180 15 
+                        S 120 20, 30 25 
+                        S 100 30, 160 35 
+                        S 110 40, 20 45 
+                        S 90 50, 180 55 
+                        S 110 60, 30 65 
+                        S 80 70, 170 75 
+                        S 130 80, 20 85 
+                        S 90 90, 180 95 
+                        S 100 100, 30 105 
+                        S 100 110, 160 115 
+                        S 110 120, 20 125 
+                        S 90 130, 170 135 
+                        S 120 140, 30 145 
                         S 100 150, 180 155 
-                        S 100 160, 20 165 
-                        S 100 170, 180 175 
-                        S 100 180, 20 185 
-                        S 100 190, 180 195 
-                        S 100 200, 20 205"
-                                stroke-linecap="round" stroke-linejoin="round" stroke="black" fill="none" pointer-events="all"/>
+                        S 110 160, 20 165 
+                        S 120 170, 160 175 
+                        S 100 180, 30 185 
+                        S 80 190, 190 195 
+                        S 110 200, 20 205
+                        S 90 210, 180 215 
+                        S 110 220, 30 225 
+                        S 80 230, 170 235 
+                        S 130 240, 20 245 
+                        S 90 250, 180 255 
+                        S 100 260, 30 265 
+                        S 100 270, 160 275 
+                        S 110 280, 20 285 
+                        S 90 290, 170 295 
+                        S 120 300, 30 305 
+                        S 100 310, 180 315 
+                        S 110 320, 20 325 
+                        S 120 330, 160 335 
+                        S 100 340, 30 345 
+                        S 80 350, 190 355 
+                        S 110 360, 20 365
+                        S 90 370, 180 375 
+                        S 110 380, 30 385 
+                        S 80 390, 170 395 
+                        S 130 400, 20 405 
+                        S 90 410, 180 415 
+                        S 100 420, 30 425 
+                        S 100 430, 160 435 
+                        S 110 440, 20 445 
+                        S 90 450, 170 455 
+                        S 120 460, 30 465 
+                        S 100 470, 180 475 
+                        S 110 480, 20 485 
+                        S 120 490, 160 495 
+                        S 100 500, 30 505 
+                        S 80 510, 190 515 
+                        S 110 520, 20 525
+                        S 90 530, 180 535 
+                        S 110 540, 30 545 
+                        S 80 550, 170 555 
+                        S 130 560, 20 565 
+                        S 90 570, 180 575 
+                        S 100 580, 30 585 
+                        S 100 590, 160 595 
+                        S 110 600, 20 605 
+                        S 90 610, 170 615 
+                        S 120 620, 30 625 
+                        S 100 630, 180 635 
+                        S 110 640, 20 645 
+                        S 120 650, 160 655 
+                        S 100 660, 30 665 
+                        S 80 670, 190 675 
+                        S 110 680, 20 685
+                        S 90 690, 180 695 
+                        S 110 700, 30 705 
+                        S 80 710, 170 715 
+                        S 130 720, 20 725 
+                        S 90 730, 180 735 
+                        S 100 740, 30 745 
+                        S 100 750, 160 755 
+                        S 110 760, 20 765 
+                        S 90 770, 170 775 
+                        S 120 780, 30 785 
+                        S 100 790, 180 795 
+                        S 110 800, 20 805 
+                        S 120 810, 160 815 
+                        S 100 820, 30 825 
+                        S 80 830, 190 835 
+                        S 110 840, 20 845"
+                        stroke-linecap="round" stroke-linejoin="round" stroke="black" fill="none" pointer-events="all"/>
                     </svg>
+                                                  
                 </div>
                 <div class="timeline">
                     <div class="timeline-component">
-                        <div class="timeline--date timeline-date-right">Jul 20, 2024</div>
+                        <div class="timeline-date timeline-date-right">Jul 20, 2024</div>
                     </div>
                     <div class="timeline-middle">
                         <div class="timeline-point"></div>
@@ -76,10 +155,10 @@
                         <div class="timeline-point"></div>
                     </div>
                     <div class="timeline-component">
-                        <div class="timeline--date">Jul 20, 2024</div>
+                        <div class="timeline-date">Jul 20, 2024</div>
                     </div>
                     <div class="timeline-component">
-                        <div class="timeline--date timeline-date-right">feb 23, 2023 - apr 24, 2023</div>
+                        <div class="timeline-date timeline-date-right">feb 23, 2023 - apr 24, 2023</div>
                     </div>
                     <div class="timeline-middle">
                         <div class="timeline-point"></div>
@@ -87,7 +166,7 @@
                     <div class="timeline-component timeline-component-bg">
                         <h2 class="timeline-title">Python book for beginners</h2>
                         <p class="timeline-paragraph">
-                            This was my first time learning a read coding language: python. I learned about basic variables, lists, dicitonarys, and loops in the python language as well as how to figure out and solve basic problems.
+                            This was my first time learning a read coding language: python. I learned about basic variables, lists, dictionaries, and loops in the python language as well as how to figure out and solve basic problems.
                         </p>
                     </div>
                     <div class="timeline-component timeline-component-bg">
@@ -100,10 +179,10 @@
                         <div class="timeline-point"></div>
                     </div>
                     <div class="timeline-component">
-                        <div class="timeline--date">jun 20, 2023</div>
+                        <div class="timeline-date">jun 20, 2023</div>
                     </div>
                     <div class="timeline-component">
-                        <div class="timeline--date timeline-date-right">Jul 20, 2024</div>
+                        <div class="timeline-date timeline-date-right">Jul 20, 2024</div>
                     </div>
                     <div class="timeline-middle">
                         <div class="timeline-point"></div>
@@ -124,10 +203,10 @@
                         <div class="timeline-point"></div>
                     </div>
                     <div class="timeline-component">
-                        <div class="timeline--date">Jul 20, 2024</div>
+                        <div class="timeline-date">Jul 20, 2024</div>
                     </div>
                     <div class="timeline-component">
-                        <div class="timeline--date timeline-date-right">Jul 20, 2024</div>
+                        <div class="timeline-date timeline-date-right">Jul 20, 2024</div>
                     </div>
                     <div class="timeline-middle">
                         <div class="timeline-point"></div>
@@ -148,10 +227,10 @@
                         <div class="timeline-point"></div>
                     </div>
                     <div class="timeline-component">
-                        <div class="timeline--date">Jul 20, 2024</div>
+                        <div class="timeline-date">Jul 20, 2024</div>
                     </div>
                     <div class="timeline-component">
-                        <div class="timeline--date timeline-date-right">Jul 20, 2024</div>
+                        <div class="timeline-date timeline-date-right">Jul 20, 2024</div>
                     </div>
                     <div class="timeline-middle">
                         <div class="timeline-point"></div>
@@ -172,10 +251,10 @@
                         <div class="timeline-point"></div>
                     </div>
                     <div class="timeline-component">
-                        <div class="timeline--date">Jul 20, 2024</div>
+                        <div class="timeline-date">Jul 20, 2024</div>
                     </div>
                     <div class="timeline-component">
-                        <div class="timeline--date timeline-date-right">Jul 20, 2024</div>
+                        <div class="timeline-date timeline-date-right">Jul 20, 2024</div>
                     </div>
                     <div class="timeline-middle">
                         <div class="timeline-point"></div>
@@ -196,14 +275,21 @@
                         <div class="timeline-point"></div>
                     </div>
                     <div class="timeline-component">
-                        <div class="timeline--date">Jul 20, 2024</div>
+                        <div class="timeline-date">Jul 20, 2024</div>
                     </div>
                 </div>
             </div>
-            <div class="spacer"></div>
+            <button class="scroll-button" onclick="scrollToTopButton()">Back To Top</button>
     </div>
     
     <script> 
+
+        function scrollToTopButton () {
+            window.scrollTo({
+                top: 0, behavior: 'smooth'
+            });
+        }
+
         function myFunction() {
             var element = document.body
             element.classList.toggle("background-change");
@@ -227,8 +313,28 @@
                     link.classList.add('active');
                 }
             });
+
+            function checkVisibility() {
+                const elements = document.querySelectorAll('.selector-content');
+                elements.forEach(footerEl => {
+                    const rect = footerEl.getBoundingClientRect();
+                    if (rect.bottom <= (window.innerHeight + 150)) {
+                        footerEl.classList.add('visible-selector-content');
+                    }
+                })
+            }
+
+            window.addEventListener('scroll', checkVisibility);
+            window.addEventListener('resize', checkVisibility);
+            checkVisibility();
         });
 
+        /*document.addEventListener('DOMContentLoaded', function() {
+            const path = document.getElementById('timelinePath');
+            const length = path.getTotalLength();
+            console.log('Path length:', length);
+            alert('Total length of the path: ' + length)
+        });*/
     </script>
 </body>
 </html>
