--- a/static/css/IndividualProjects/andersonCodingClub.css
+++ b/static/css/IndividualProjects/andersonCodingClub.css
@@ -57,7 +57,7 @@
 }
 
 body {
-    font-family: 'Arial', sans-serif;
+    font-family: -apple-system, BlinkMacSystemFont, "San Francisco", "Helvetica Neue", Helvetica, Arial, sans-serif;
     margin: 0;
     padding: 0;
     background: rgb(255,255,255);
